[project]
name = "nonebot-adapter-red"
version = "0.1.0rc1"
description = "Red Protocol Adapter for Nonebot2"
authors = [
    {name = "zhaomaoniu"},
]
dependencies = [
    "nonebot2>=2.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "pre-commit>=3.3.3",
    "nonebot2[httpx,websockets]>=2.0.1",
]
[tool.pdm.build]
includes = ["nonebot"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731"]

line-length = 88
target-version = "py38"